# VFPVector

./: CMakeLists.txt  LICENSE  README.md  exports.yml  vfp_gen.c  vfp_vector.c
src/: main.c  vfp_f32_emu.c  vfp_f64_emu.c  vfp_gen.c  vfp_vector.c  vfp_vector.h
